syntax = "proto3";

package eventpb;

option go_package = "github.com/vx416/axs/pb/eventpb";

message BalanceChangeEvent {
    string event_id = 1;
    string event_type = 2;
    int64 event_type_id = 3;
    int64 account_id = 4;
    int64 user_id = 5;
    int32 account_shard_id = 6;
    string source_service = 7;
    int64 source_svc_id = 8;
    int64 related_order_id = 9;
    string idempotency_key = 10;
    int64 created_msec = 11;
    repeated BalanceChange changes = 12;
}

message BalanceChange {
    int64 change_id = 1;
    string currency_code = 2;
    string currency_symbol = 3;
    string available_delta = 4;
    string frozen_delta = 5;
    string fallback_currency_code = 6;
    string fallback_currency_symbol = 7;
    string fallback_available_delta = 8;
    string fallback_frozen_delta = 9;
    int64 change_log_id = 10;
}